--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "pos",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postinstall": "prisma generate",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.22.0",
-    "docx": "^9.5.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^4.1.0",
-    "next": "16.1.6",
-    "next-auth": "^4.24.13",
-    "papaparse": "^5.5.3",
-    "prisma": "^5.22.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "recharts": "^3.7.0",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/papaparse": "^5.5.2",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "pos",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "postinstall": "prisma generate",
+        "start": "next start",
+        "lint": "eslint"
+    },
+    "dependencies": {
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.22.0",
+        "docx": "^9.5.1",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^4.1.0",
+        "next": "16.1.6",
+        "next-auth": "^4.24.13",
+        "nodemailer": "^6.10.1",
+        "papaparse": "^5.5.3",
+        "prisma": "^5.22.0",
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
+        "recharts": "^3.7.0",
+        "xlsx": "^0.18.5"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/nodemailer": "^7.0.9",
+        "@types/papaparse": "^5.5.2",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "16.1.6",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
