--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
         "jspdf": "^4.1.0",
         "next": "16.1.6",
         "next-auth": "^4.24.13",
-        "nodemailer": "^6.10.1",
+        "nodemailer": "^7.0.13",
         "papaparse": "^5.5.3",
         "prisma": "^5.22.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "recharts": "^3.7.0",
         "xlsx": "^0.18.5"
+    },
+    "overrides": {
+        "nodemailer": "^7.0.13"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
