--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
         "prisma": "^5.22.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
-        "recharts": "^3.7.0",
-        "xlsx": "^0.18.5"
+        "recharts": "^3.7.0"
     },
     "overrides": {
         "nodemailer": "^7.0.13"
